# KickUp

./: .env.example  .gitignore  LICENSE  PROMPTS.md  README.md  app.py  orchestration.json  pyproject.toml  requirements.txt  run_with_logging.py  test_idea_generator_component.py
agent_prompts/: critic_prompt.txt  ideagenerator_prompt.txt  orchestrator_prompt.txt  pain_point_miner_prompt.txt  pitch_writer_prompt.txt  pitch_writer_prompt_compressed.txt  scorer_prompt.txt
src/: __init__.py  config.py  graph.py  main.py  run_controller.py
src/agents/: critic.py  idea_generator.py  orchestrator.py  pain_point_miner.py  pitch_writer.py  pitch_writer.py.broken  scorer.py
src/llm/: client.py  prompts.py
src/state/: schema.py
src/tools/: hackernews_scraper.py  producthunt_scraper.py  reddit_scraper.py  tavily_content_scraper.py  tavily_fallback.py  youtube_scraper.py
test/: test_critic_component.py  test_e2e.py  test_e2e_full.py  test_e2e_synthetic.py  test_hackernews_scraper_component.py  test_helpers.py  test_idea_generator_component.py  test_improvements.py  test_orchestrator_component.py  test_pain_point_miner_component.py  test_pain_point_miner_scrapers_component.py  test_pitch_writer_component.py  test_producthunt_scraper_component.py  test_revision_feedback_flow.py  test_scorer_component.py  test_youtube_scraper_component.py
ui/: gradio_app.py
